--- a/index.html
+++ b/index.html
@@ -140,84 +140,7 @@
             </sidebar-select>
         </blocker-wrapp>
 
-        <sidebar-wrapp>
-            <sidebar-header title="Связанные требования">
-                <div class="sidebar-subheader">Выберите требования из таблицы</div>
-                <choose-btn title="Выбрать"></choose-btn>
-            </sidebar-header>
-            <requirement-card></requirement-card>
-            <requirement-card></requirement-card>
-            <requirement-card></requirement-card>
-        </sidebar-wrapp>
 
-        <sidebar-wrapp>
-            <sidebar-header title="VVR-2">
-                <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
-            </sidebar-header>
-            <project-info-block title="Основаня информация">
-                <project-info-item title="Тип">
-                    Ручной
-                </project-info-item>
-                <project-info-item title="Версия">
-                    Итерация 1     
-                </project-info-item>
-                <project-info-item title="Folder">
-                    Создание одного проек..
-                </project-info-item>
-                <project-info-item title="Приоритет">
-                    Средний
-                    <img slot="image" src="img/test.png" alt="">
-                </project-info-item>
-                <project-info-item title="Фиксированная величина">
-                    0.4
-                </project-info-item>
-                <project-info-item title="Компонент">
-                    camera sreen
-                </project-info-item>
-                <project-info-item title="Label">
-                    Mobile, Camera
-                </project-info-item>
-                <project-info-item title="Browser">
-                    Any browser
-                </project-info-item>
-                <project-info-item title="OS">
-                    Any OS
-                </project-info-item>
-                <project-info-item title="Дата завершения">
-                    2015-05-10 
-                </project-info-item>
-                <project-info-item title="Запланированное время">
-                    00:10:00   
-                </project-info-item>
-            </project-info-block>
-            <project-info-block title="Руководящий персонал">
-                <project-info-item title="Subsystem">
-                    Frontend: Admin
-                    <img slot="image" src="img/test.png" alt="">
-                </project-info-item>
-                <project-info-item title="Ответственнй">
-                    Валентин Никитин
-                    <img slot="image" src="img/test.png" alt="">
-                </project-info-item>
-                <project-info-item title="Проверяющий">
-                    Alexey Volkov 
-                </project-info-item>
-                <project-info-item title="Утверждающий">
-                    Алексей Рижков
-                </project-info-item>
-            </project-info-block>
-            <project-info-block title="Описание">
-                Сохранение проекта созданного через камеру
-            </project-info-block>
-        </sidebar-wrapp>
-        <sidebar-wrapp>
-            <sidebar-header title="Данные теста">
-                <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
-            </sidebar-header>
-            <project-info-block>
-                Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
-            </project-info-block>
-        </sidebar-wrapp>
 
 
         <navbar-vertical>
@@ -230,6 +153,88 @@
         </navbar-vertical>
 
 
+    </div>
+    <div class="container">
+        <navbar-vertical></navbar-vertical>
+    <sidebar-wrapp>
+        <sidebar-header title="Связанные требования">
+            <div class="sidebar-subheader">Выберите требования из таблицы</div>
+            <choose-btn title="Выбрать"></choose-btn>
+        </sidebar-header>
+        <requirement-card></requirement-card>
+        <requirement-card></requirement-card>
+        <requirement-card></requirement-card>
+    </sidebar-wrapp>
+
+    <sidebar-wrapp>
+        <sidebar-header title="VVR-2">
+            <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+        </sidebar-header>
+        <project-info-block title="Основаня информация">
+            <project-info-item title="Тип">
+                Ручной
+            </project-info-item>
+            <project-info-item title="Версия">
+                Итерация 1
+            </project-info-item>
+            <project-info-item title="Folder">
+                Создание одного проек..
+            </project-info-item>
+            <project-info-item title="Приоритет">
+                Средний
+                <img slot="image" src="img/test.png" alt="">
+            </project-info-item>
+            <project-info-item title="Фиксированная величина">
+                0.4
+            </project-info-item>
+            <project-info-item title="Компонент">
+                camera sreen
+            </project-info-item>
+            <project-info-item title="Label">
+                Mobile, Camera
+            </project-info-item>
+            <project-info-item title="Browser">
+                Any browser
+            </project-info-item>
+            <project-info-item title="OS">
+                Any OS
+            </project-info-item>
+            <project-info-item title="Дата завершения">
+                2015-05-10
+            </project-info-item>
+            <project-info-item title="Запланированное время">
+                00:10:00
+            </project-info-item>
+        </project-info-block>
+        <project-info-block title="Руководящий персонал">
+            <project-info-item title="Subsystem">
+                Frontend: Admin
+                <img slot="image" src="img/test.png" alt="">
+            </project-info-item>
+            <project-info-item title="Ответственнй">
+                Валентин Никитин
+                <img slot="image" src="img/test.png" alt="">
+            </project-info-item>
+            <project-info-item title="Проверяющий">
+                Alexey Volkov
+            </project-info-item>
+            <project-info-item title="Утверждающий">
+                Алексей Рижков
+            </project-info-item>
+        </project-info-block>
+        <project-info-block title="Описание">
+            Сохранение проекта созданного через камеру
+        </project-info-block>
+    </sidebar-wrapp>
+    <sidebar-wrapp>
+        <sidebar-header title="Данные теста">
+            <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+        </sidebar-header>
+        <project-info-block>
+            Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
+        </project-info-block>
+    </sidebar-wrapp>
+        <navbar-vertical></navbar-vertical>
     </div>
 </body>
 </html>
