--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>CUBE</title>
@@ -17,6 +18,7 @@
     <link rel="import" href="components/project-info/project-info.component.html">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <navbar-horizontal>
         <navbar-breadcrumbs title="TEST CYCLES"></navbar-breadcrumbs>
@@ -102,151 +104,6 @@
             </info-message>
         </sidebar-wrapp>
 
-        <sidebar-wrapp>
-            <sidebar-header title="Шаги теста">
-                <div class="sidebar-subheader">Добавьте шаги и заполните поля</div>
-                <choose-btn title="Добавить"></choose-btn>
-            </sidebar-header>
-            <step-dragndrop draggable="true" title="Старт работы с приложением"></step-dragndrop>
-            <step-dragndrop draggable="true" title="Нажатие на кнопку"></step-dragndrop>
-            <step-dragndrop draggable="true" title="Добавление меток"></step-dragndrop>
-            <step-dragndrop draggable="true" title="Результат"></step-dragndrop>
-            <info-message>
-                <div class="info-message__text">Вы можете установить последовательность перетакскивая шаги</div>
-            </info-message>
-        </sidebar-wrapp>
-
-        <create-test>
-            <step-header title="Шаг 1">
-                <div class="step-header-subheader">Создание тест кейса</div> 
-                <step-save-btn></step-save-btn>
-            </step-header>
-            <step-content>
-                <sidebar-textinput title="Название шага" placeholder="Старт работы с приложением"></sidebar-textinput>
-                <sidebar-textarea title="Действие" height="102"></sidebar-textarea>
-                <sidebar-textarea title="Данные теста" height="102"></sidebar-textarea>
-                <sidebar-textarea title="Ожидаемый результат" height="102"></sidebar-textarea>
-            </step-content>
-        </create-test>
-
-<!--
-            <sidebar-wrapp>
-                <sidebar-header title="Блокеры">
-                    <div class="sidebar-subheader">Укажите зависимость</div>
-                </sidebar-header>
-                <search-and-add title="Найти и добавить"></search-and-add>
-                <choose-btn title="Добавить"></choose-btn>
-            </sidebar-wrapp>
-        -->
-
-        <blocker-wrapp>
-            <blocker-choosen number="5">
-                <choose-btn title="Добавить"></choose-btn>
-            </blocker-choosen>
-            <project-info-block title="Основаня информация">
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-            </project-info-block>
-            <project-info-block title="Основаня информация">
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-            </project-info-block>
-            <sidebar-select title="Команда">
-                <div class="select-item">Все</div>
-                <div class="select-item">Все2</div>
-            </sidebar-select>
-        </blocker-wrapp>
-
-        <navbar-vertical>
-            <navbar-vertical-item title="проект"></navbar-vertical-item>
-            <navbar-vertical-item title="доступно"></navbar-vertical-item>
-            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
-            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
-            <navbar-vertical-item title="зрители"></navbar-vertical-item>
-            <navbar-vertical-item title="файлы "></navbar-vertical-item>
-        </navbar-vertical>
-    </div>
-    <div class="container">
-        <navbar-vertical><navbar-vertical-item title="проект"></navbar-vertical-item>
-            <navbar-vertical-item title="доступно"></navbar-vertical-item>
-            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
-            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
-            <navbar-vertical-item title="зрители"></navbar-vertical-item>
-            <navbar-vertical-item title="файлы "></navbar-vertical-item></navbar-vertical>
-    <sidebar-wrapp>
-        <sidebar-header title="Связанные требования">
-            <div class="sidebar-subheader">Выберите требования из таблицы</div>
-            <choose-btn title="Выбрать"></choose-btn>
-        </sidebar-header>
-        <requirement-card></requirement-card>
-        <requirement-card></requirement-card>
-        <requirement-card></requirement-card>
-    </sidebar-wrapp>
-
-    <sidebar-wrapp>
-        <sidebar-header title="VVR-2">
-            <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
-        </sidebar-header>
-        <project-info-block title="Основаня информация">
-            <project-info-item title="Тип">
-                Ручной
-            </project-info-item>
-            <project-info-item title="Версия">
-                Итерация 1
-            </project-info-item>
-            <project-info-item title="Folder">
-                Создание одного проек..
-            </project-info-item>
-            <project-info-item title="Приоритет">
-                Средний
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Фиксированная величина">
-                0.4
-            </project-info-item>
-            <project-info-item title="Компонент">
-                camera sreen
-            </project-info-item>
-            <project-info-item title="Label">
-                Mobile, Camera
-            </project-info-item>
-            <project-info-item title="Browser">
-                Any browser
-            </project-info-item>
-            <project-info-item title="OS">
-                Any OS
-            </project-info-item>
-            <project-info-item title="Дата завершения">
-                2015-05-10
-            </project-info-item>
-            <project-info-item title="Запланированное время">
-                00:10:00
-            </project-info-item>
-        </project-info-block>
-        <project-info-block title="Руководящий персонал">
-            <project-info-item title="Subsystem">
-                Frontend: Admin
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Ответственнй">
-                Валентин Никитин
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Проверяющий">
-                Alexey Volkov
-            </project-info-item>
-            <project-info-item title="Утверждающий">
-                Алексей Рижков
-            </project-info-item>
-        </project-info-block>
-        <project-info-block title="Описание">
-            Сохранение проекта созданного через камеру
-        </project-info-block>
-    </sidebar-wrapp>
         <create-test>
             <step-header title="Шаг 1">
                 <div class="step-header-subheader">Создание тест кейса</div>
@@ -259,20 +116,158 @@
                 <sidebar-textarea title="Ожидаемый результат" height="102"></sidebar-textarea>
             </step-content>
         </create-test>
-    <sidebar-wrapp>
-        <sidebar-header title="Данные теста">
-            <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
-        </sidebar-header>
-        <project-info-block>
-            Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
-        </project-info-block>
-    </sidebar-wrapp>
-        <navbar-vertical><navbar-vertical-item title="проект"></navbar-vertical-item>
+
+        <!--
+            <sidebar-wrapp>
+                <sidebar-header title="Блокеры">
+                    <div class="sidebar-subheader">Укажите зависимость</div>
+                </sidebar-header>
+                <search-and-add title="Найти и добавить"></search-and-add>
+                <choose-btn title="Добавить"></choose-btn>
+            </sidebar-wrapp>
+        -->
+        <div class="cont">
+            <sidebar-wrapp></sidebar-wrapp>
+            <blocker-wrapp>
+                <search-and-add title="Найти и добавить"></search-and-add>
+                <blocker-choosen number="5">
+                    <choose-btn title="Добавить"></choose-btn>
+                </blocker-choosen>
+                <project-info-block title="РУКОВОДЯЩИЙ ПЕРСОНАЛ">
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                </project-info-block>
+                <project-info-block title="FRONTEND">
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                </project-info-block>
+                <sidebar-select title="Команда">
+                    <div class="select-item">Все</div>
+                    <div class="select-item">Все2</div>
+                </sidebar-select>
+            </blocker-wrapp>
+        </div>
+
+
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
             <navbar-vertical-item title="доступно"></navbar-vertical-item>
             <navbar-vertical-item title="блокеры"></navbar-vertical-item>
             <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
             <navbar-vertical-item title="зрители"></navbar-vertical-item>
-            <navbar-vertical-item title="файлы "></navbar-vertical-item></navbar-vertical>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
+    </div>
+    <div class="container">
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
+            <navbar-vertical-item title="доступно"></navbar-vertical-item>
+            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
+            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
+            <navbar-vertical-item title="зрители"></navbar-vertical-item>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
+        <sidebar-wrapp>
+            <sidebar-header title="Связанные требования">
+                <div class="sidebar-subheader">Выберите требования из таблицы</div>
+                <choose-btn title="Выбрать"></choose-btn>
+            </sidebar-header>
+            <requirement-card></requirement-card>
+            <requirement-card></requirement-card>
+            <requirement-card></requirement-card>
+        </sidebar-wrapp>
+
+        <sidebar-wrapp>
+            <sidebar-header title="VVR-2">
+                <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+            </sidebar-header>
+            <project-info-block title="Основаня информация">
+                <project-info-item title="Тип">
+                    Ручной
+                </project-info-item>
+                <project-info-item title="Версия">
+                    Итерация 1
+                </project-info-item>
+                <project-info-item title="Folder">
+                    Создание одного проек..
+                </project-info-item>
+                <project-info-item title="Приоритет">
+                    Средний
+                    <img slot="image" src="img/test.png" alt="">
+                </project-info-item>
+                <project-info-item title="Фиксированная величина">
+                    0.4
+                </project-info-item>
+                <project-info-item title="Компонент">
+                    camera sreen
+                </project-info-item>
+                <project-info-item title="Label">
+                    Mobile, Camera
+                </project-info-item>
+                <project-info-item title="Browser">
+                    Any browser
+                </project-info-item>
+                <project-info-item title="OS">
+                    Any OS
+                </project-info-item>
+                <project-info-item title="Дата завершения">
+                    2015-05-10
+                </project-info-item>
+                <project-info-item title="Запланированное время">
+                    00:10:00
+                </project-info-item>
+            </project-info-block>
+            <project-info-block title="Руководящий персонал">
+                <project-info-item title="Subsystem">
+                    Frontend: Admin
+                    <img slot="image" src="img/test.png" alt="">
+                </project-info-item>
+                <project-info-item title="Ответственнй">
+                    Валентин Никитин
+                    <img slot="image" src="img/test.png" alt="">
+                </project-info-item>
+                <project-info-item title="Проверяющий">
+                    Alexey Volkov
+                </project-info-item>
+                <project-info-item title="Утверждающий">
+                    Алексей Рижков
+                </project-info-item>
+            </project-info-block>
+            <project-info-block title="Описание">
+                Сохранение проекта созданного через камеру
+            </project-info-block>
+        </sidebar-wrapp>
+        <create-test>
+            <step-header title="Шаг 1">
+                <div class="step-header-subheader">Создание тест кейса</div>
+                <step-save-btn></step-save-btn>
+            </step-header>
+            <step-content>
+                <sidebar-textinput title="Название шага" placeholder="Старт работы с приложением"></sidebar-textinput>
+                <sidebar-textarea title="Действие" height="102"></sidebar-textarea>
+                <sidebar-textarea title="Данные теста" height="102"></sidebar-textarea>
+                <sidebar-textarea title="Ожидаемый результат" height="102"></sidebar-textarea>
+            </step-content>
+        </create-test>
+        <sidebar-wrapp>
+            <sidebar-header title="Данные теста">
+                <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+            </sidebar-header>
+            <project-info-block>
+                Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
+            </project-info-block>
+        </sidebar-wrapp>
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
+            <navbar-vertical-item title="доступно"></navbar-vertical-item>
+            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
+            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
+            <navbar-vertical-item title="зрители"></navbar-vertical-item>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
     </div>
 </body>
+
 </html>
