project-info withiout shadows

--- a/index.html
+++ b/index.html
@@ -171,56 +171,23 @@
             <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
         </sidebar-header>
         <project-info-block title="Основаня информация">
-            <project-info-item title="Тип">
-                Ручной
-            </project-info-item>
-            <project-info-item title="Версия">
-                Итерация 1
-            </project-info-item>
-            <project-info-item title="Folder">
-                Создание одного проек..
-            </project-info-item>
-            <project-info-item title="Приоритет">
-                Средний
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Фиксированная величина">
-                0.4
-            </project-info-item>
-            <project-info-item title="Компонент">
-                camera sreen
-            </project-info-item>
-            <project-info-item title="Label">
-                Mobile, Camera
-            </project-info-item>
-            <project-info-item title="Browser">
-                Any browser
-            </project-info-item>
-            <project-info-item title="OS">
-                Any OS
-            </project-info-item>
-            <project-info-item title="Дата завершения">
-                2015-05-10
-            </project-info-item>
-            <project-info-item title="Запланированное время">
-                00:10:00
-            </project-info-item>
+            <project-info-item title="Тип" value="Ручной" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item title="Версия" value="Итерация 1"></project-info-item>
+            <project-info-item title="Folder" value="Создание одного проекта"></project-info-item>
+            <project-info-item title="Приоритет" value="Средний"></project-info-item>
+            <project-info-item title="Фиксированная величина" value="0.4"></project-info-item>
+            <project-info-item title="Компонент" value="camera sreen"></project-info-item>
+            <project-info-item title="Label" value="Mobile, Camera"></project-info-item>
+            <project-info-item title="Browser" value="Any browser"></project-info-item>
+            <project-info-item title="OS" value="Any OS"></project-info-item>
+            <project-info-item title="Дата завершения" value="2015-05-10"></project-info-item>
+            <project-info-item title="Запланированное время" value="00:10:00"></project-info-item>
         </project-info-block>
         <project-info-block title="Руководящий персонал">
-            <project-info-item title="Subsystem">
-                Frontend: Admin
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Ответственнй">
-                Валентин Никитин
-                <img slot="image" src="img/test.png" alt="">
-            </project-info-item>
-            <project-info-item title="Проверяющий">
-                Alexey Volkov
-            </project-info-item>
-            <project-info-item title="Утверждающий">
-                Алексей Рижков
-            </project-info-item>
+            <project-info-item title="Subsystem" value="Frontend: Admin" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item title="Ответственнй" value="Валентин Никитин" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item title="Проверяющий" value="Alexey Volkov"></project-info-item>
+            <project-info-item title="Утверждающий" value="Алексей Рижков"></project-info-item>
         </project-info-block>
         <project-info-block title="Описание">
             Сохранение проекта созданного через камеру
@@ -230,9 +197,9 @@
         <sidebar-header title="Данные теста">
             <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
         </sidebar-header>
-        <project-info-block>
+        <sidebar-text>
             Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
-        </project-info-block>
+        </sidebar-text>
     </sidebar-wrapp>
         <navbar-vertical></navbar-vertical>
     </div>
