--- a/index.html
+++ b/index.html
@@ -207,6 +207,33 @@
         </project-info-block>
     </sidebar-wrapp>
     <sidebar-wrapp>
+        <sidebar-header title="VVR-2">
+            <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+        </sidebar-header>
+        <project-info-block title="Основаня информация">
+            <project-info-item round="round"    title="Тип"                      value="Ручной" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item round="disc"     title="Версия"                   value="Итерация 1"></project-info-item>
+            <project-info-item                  title="Folder"                   value="Создание одного проекта"></project-info-item>
+            <project-info-item round="round"    title="Приоритет"                value="Средний"></project-info-item>
+            <project-info-item round="disc"     title="Фиксированная величина"   value="0.4"></project-info-item>
+            <project-info-item round="disc"     title="Компонент"                value="camera sreen"></project-info-item>
+            <project-info-item round="round"    title="Label"                    value="Mobile, Camera"></project-info-item>
+            <project-info-item round="round"    title="Browser"                  value="Any browser"></project-info-item>
+            <project-info-item round="round"    title="OS"                       value="Any OS"></project-info-item>
+            <project-info-item round="round"    title="Дата завершения"          value="2015-05-10"></project-info-item>
+            <project-info-item                  title="Запланированное время"    value="00:10:00"></project-info-item>
+        </project-info-block>
+        <project-info-block title="Руководящий персонал">
+            <project-info-item round="round"    title="Subsystem"       value="Frontend: Admin" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item round="disc"     title="Ответственнй"    value="Валентин Никитин" img="components/project-info/img/test.png"></project-info-item>
+            <project-info-item                  title="Проверяющий"     value="Alexey Volkov"></project-info-item>
+            <project-info-item round="round"    title="Утверждающий"    value="Алексей Рижков"></project-info-item>
+        </project-info-block>
+        <project-info-block title="Описание">
+            Сохранение проекта созданного через камеру
+        </project-info-block>
+    </sidebar-wrapp>
+    <sidebar-wrapp>
         <sidebar-header title="Данные теста">
             <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
         </sidebar-header>
