--- a/index.html
+++ b/index.html
@@ -88,9 +88,25 @@
                 <div class="select-item">Mozila Firefox</div>
                 <div class="select-item">Safari</div>
             </sidebar-select>
+            <sidebar-select title="OS">
+                <div class="select-item">Any OS</div>
+                <div class="select-item">Mac OS</div>
+                <div class="select-item">Linux</div>
+                <div class="select-item">Windows</div>
+            </sidebar-select>
+            <sidebar-select title="Дата завершения">
+                <div class="select-item">Any 2015-05-07</div>
+                <div class="select-item">Any 2015-05-07</div>
+                <div class="select-item">Any 2015-05-07</div>
+                <div class="select-item">Any 2015-05-07</div>
+            </sidebar-select>
+            <sidebar-select title="Время выполнеиня">
+                <div class="select-item">00:10:00</div>
+                <div class="select-item">00:20:00</div>
+                <div class="select-item">00:40:00</div>
+            </sidebar-select>
         </sidebar-wrapp>
 
-<!--
         <sidebar-wrapp>
             <sidebar-header title="Шаги теста">
                 <div class="sidebar-subheader">Добавьте шаги и заполните поля</div>
@@ -104,7 +120,6 @@
                 <div class="info-message__text">Вы можете установить последовательность перетакскивая шаги</div>
             </info-message>
         </sidebar-wrapp>
--->
 
         <create-test>
             <step-header title="Шаг 1">
@@ -134,9 +149,10 @@
                     <div class="sidebar-subheader">Укажите зависимость</div>
                     <choose-btn title="Выбрать"></choose-btn>
                 </sidebar-header>
+                <project-info-block title="функциональные"></project-info-block>
             </sidebar-wrapp>
+            <search-and-add title="Найти и добавить"></search-and-add>
             <blocker-wrapp>
-                <search-and-add title="Найти и добавить"></search-and-add>
                 <blocker-choosen number="5">
                     <choose-btn title="Добавить"></choose-btn>
                 </blocker-choosen>
