--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
             <navbar-vertical-item title="файлы "></navbar-vertical-item>
         </navbar-vertical>
     </div>
+    <div class="container">
+        <create-test>
+            <step-header title="Тест кейсы">
+                <div class="step-header-subheader">Группы</div>
+                <choose-btn title="Создать тест кейс"></choose-btn>
+                <choose-btn title="Создать новую группу"></choose-btn>
+            </step-header>
+            <step-content>
+
+            </step-content>
+        </create-test>
+    </div>
 </body>
 
 </html>
