--- a/index.html
+++ b/index.html
@@ -299,8 +299,9 @@
                 <choose-btn title="Создать новую группу"></choose-btn>
             </step-header>
             <project-case name="Создание одного проэкта" properties="Дата начала: 18/март/17, Build: 2, Enviroment: QA1" done="20%" to-do="80%">
-                <project-case-table img="" col-1-1="ID" col-3-1="Имя" col-1-2="Статус" col-1-3="Блокер" col-1-4="Дефект" col-1-5="Компонент" col-1-6="Label">
-                    
+                <project-case-table img="" identifire="ID" name="Имя" status="Статус" blocker="Блокер" defect="Дефект" component="Компонент" label="Label">
+                    <project-case-row img="" identifire="VVR-1" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="" identifire="VVR-1" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
                 </project-case-table>
             </project-case>
         </create-test>
